--- a/app/src/main/res/layout/activity_exercise_choose.xml
+++ b/app/src/main/res/layout/activity_exercise_choose.xml
@@ -1,17 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
+<android.support.design.widget.CoordinatorLayout  xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:id="@+id/coordinator_exercise"
     android:layout_height="match_parent"
-    tools:context=".TrainingChoosing">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".TrainingChoosing"
+    android:orientation="vertical">
 
-    <android.support.v7.widget.RecyclerView
+    <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_margin="7dp"
-        android:id="@+id/list">
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
 
-    </android.support.v7.widget.RecyclerView>
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar_exercise"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
 
-</LinearLayout>
+    </android.support.design.widget.AppBarLayout>
+
+    <include layout="@layout/content_exercise_choose"/>
+
+</android.support.design.widget.CoordinatorLayout >
