--- a/app/src/main/res/layout/content_exercise_choose.xml
+++ b/app/src/main/res/layout/content_exercise_choose.xml
@@ -3,13 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TrainingChoosing">
+    tools:context=".TrainingChoosing"
+    android:background="#283593">
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="16dp"
         android:id="@+id/list">
+
 
     </android.support.v7.widget.RecyclerView>
 
