--- a/app/src/main/res/layout/activity_exercise_decription.xml
+++ b/app/src/main/res/layout/activity_exercise_decription.xml
@@ -10,5 +10,13 @@
         android:id="@+id/description_exercise"
         android:text="Here is description"
         />
+    <TextView
+        android:id="@+id/description"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:textSize="16sp"
+        android:text="Dead lift with legs pulling weight off the ground"
+        />
 
 </android.support.constraint.ConstraintLayout>
