--- a/app/src/main/res/layout/item_exercise.xml
+++ b/app/src/main/res/layout/item_exercise.xml
@@ -4,11 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_marginLeft="12dp"
     android:layout_marginTop="12dp"
     android:layout_marginRight="12dp"
     android:paddingEnd="8dp"
-    android:paddingBottom="8dp">
+    android:paddingBottom="8dp"
+    card_view:cardCornerRadius="15dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,10 +21,10 @@
         <TextView
             android:id="@+id/name"
             android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:layout_margin="24dp"
+            android:layout_height="64dp"
+            android:layout_margin="16dp"
             android:gravity="center"
-            android:textSize="24sp" />
+            android:textSize="18sp" />
 
     </LinearLayout>
 
