--- a/app/src/main/res/menu/training_description_menu.xml
+++ b/app/src/main/res/menu/training_description_menu.xml
@@ -6,5 +6,7 @@
         app:showAsAction="always"
         android:icon="@drawable/edit"
         android:title="Edit training"/>
-
+    <item android:id="@+id/delete_training"
+        app:showAsAction="never"
+        android:title="Delete training"/>
 </menu>
