--- a/app/src/main/res/layout/activity_exercise_decription.xml
+++ b/app/src/main/res/layout/activity_exercise_decription.xml
@@ -1,21 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
-    tools:context=".ExerciseDescription">
+    android:layout_width="match_parent"
+    android:orientation="vertical">
     <TextView
+        android:id="@+id/nameExercise"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/description_exercise"
-        android:text="Here is description"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:textSize="16sp"
         />
     <TextView
         android:id="@+id/description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="16sp"
-        android:text="Dead lift with legs pulling weight off the ground"
+        />
+    <TextView
+        android:id="@+id/muscle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:textSize="16sp"
         />
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
