--- a/app/src/main/res/layout/item_training.xml
+++ b/app/src/main/res/layout/item_training.xml
@@ -3,15 +3,13 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginLeft="12dp"
-    android:layout_marginTop="12dp"
+    android:layout_marginTop="8dp"
     android:layout_marginRight="12dp"
-    android:paddingTop="8dp"
-    android:paddingEnd="8dp"
-    android:paddingBottom="8dp"
+    android:layout_marginBottom="4dp"
+    app:cardElevation="4dp"
     card_view:cardCornerRadius="15dp">
 
     <android.support.constraint.ConstraintLayout
@@ -25,8 +23,7 @@
             android:layout_height="72dp"
             android:layout_margin="16dp"
             android:gravity="center"
-            android:textSize="18sp"
-            tools:layout_editor_absoluteX="16dp" />
+            android:textSize="18sp" />
 
     </android.support.constraint.ConstraintLayout>
 
