added training delete

--- a/app/src/main/res/layout/content_training_description.xml
+++ b/app/src/main/res/layout/content_training_description.xml
@@ -5,12 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".TrainingDescription"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:showIn="@layout/activity_training_description">
 
-    <TextView
+    <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
-        android:id="@+id/description_training"/>
+        android:id="@+id/list_description_exercise"/>
 
 </LinearLayout>
