--- a/app/src/main/res/layout/activity_training_description.xml
+++ b/app/src/main/res/layout/activity_training_description.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".TrainingDescription"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="#c5cae9">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
