--- a/app/src/main/res/layout/content_training_choose.xml
+++ b/app/src/main/res/layout/content_training_choose.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".TrainingChoosing"
-    tools:showIn="@layout/activity_training_choose">
+    tools:showIn="@layout/activity_training_choose"
+    android:background="#e8eaf6">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/list"
