--- a/app/src/main/res/layout/activity_exercise_choose.xml
+++ b/app/src/main/res/layout/activity_exercise_choose.xml
@@ -5,7 +5,8 @@
     android:id="@+id/coordinator_exercise"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ExerciseChoosing">
+    tools:context=".ExerciseChoosing"
+    android:background="#c5cae9">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
