--- a/app/src/main/res/layout/item_exercise.xml
+++ b/app/src/main/res/layout/item_exercise.xml
@@ -17,7 +17,8 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="72dp"
-        android:gravity="center">
+        android:gravity="center"
+        android:id="@+id/card_view">
 
         <TextView
             android:id="@+id/name"
